itireland-gateway-server/k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: itireland-gateway
  namespace: itireland
spec:
  selector:
    app: itireland-gateway
  ports:
    - protocol: TCP
      port: 8080
      targetPort: 8080
  type: NodePort
